[package]
name = "connection-string"
version = "0.1.14"
license = "MIT OR Apache-2.0"
repository = "https://github.com/prisma/connection-string"
documentation = "https://docs.rs/connection-string"
description = "Connection string parsing in Rust (and WebAssembly)"
readme = "README.md"
edition = "2018"
rust = "1.46"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Julius de Bruijn <julius@nauk.io>",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.56"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
